# weather_api167

./: README.md  README_EN.md  README_ZH-TW.md  __init__.py  openapi.json  pyproject.toml  server.py  setup.py
.github/workflows/: sonar.yml
